# CG-24_25

./: README.md  teapot_example.patch
Fase1/: CMakeLists.txt  README.md  main.cpp
Fase1/Engine/: engine.cpp  engine.h
Fase1/Generator/: generator.cpp  generator.h
Fase1/Utils/: CMakeLists.txt  XMLDataFormat.cpp  XMLDataFormat.h  point.cpp  primitive.cpp  primitive.h
Fase1/include/Engine/: engine.h
Fase1/include/Generator/: buildPrimitives.h  generator.h
Fase1/include/UI/: ui.h
Fase1/include/Utils/: XMLDataFormat.h  primitive.h
Fase1/src/Engine/: engine.cpp
Fase1/src/Generator/: buildPrimitives.cpp  generator.cpp
Fase1/src/UI/: ui.cpp
Fase1/src/Utils/: XMLDataFormat.cpp  point.cpp  primitive.cpp
Fase1/test_files_phase_1/: test_1_3.xml  test_box.xml  test_cone2.xml  test_plane.xml  test_plane2.xml  test_plane_box.xml  test_sphere.xml
Fase1/tinyXML/: CMakeLists.txt  tinyxml.cpp  tinyxmlparser.cpp
Fase2/: CMakeLists.txt  README.md  solar_system.txt
Fase2/include/Engine/: engine.h
Fase2/include/Generator/: buildPrimitives.h  generator.h
Fase2/include/Utils/: XMLDataFormat.h  point.h  primitive.h
Fase2/src/Engine/: engine.cpp
Fase2/src/Generator/: buildPrimitives.cpp  generator.cpp
Fase2/src/UI/: ui.cpp
Fase2/src/Utils/: XMLDataFormat.cpp  point.cpp  primitive.cpp
Fase2/test_files_phase_1/: test_plane.xml  test_sphere2.xml  test_sphere_cone.xml
Fase2/test_files_phase_2/: diff_boxes.xml  saturn.xml  solar_system.xml  solar_system2.xml  solar_system3.xml  solar_system4.xml  solar_system_alligned.xml  solar_system_circling_sun.xml  solar_system_final.xml  solar_system_real_scale.xml  test_anel.xml  test_ring.xml  test_ring2.xml  test_ring4.xml  test_saturn.xml  test_saturn2.xml  test_solar_system_real_scale.xml
Fase2/tinyXML/: tinystr.h  tinyxml.h  tinyxmlparser.cpp
Fase3/: CMakeLists.txt  README.md  c.patch  comet  comet.patch  comet_generator  comet_output.patch  cometgen.c  f.patch  g.patch  h.patch  jo.patch  k.patch
Fase3/include/Engine/: engine.h
Fase3/include/Generator/: bezier.h
Fase3/include/UI/: ui.h
Fase3/include/Utils/: XMLDataFormat.h  primitive.h
Fase3/src/Engine/: engine.cpp
Fase3/src/Generator/: bezier.cpp  buildPrimitives.cpp  generator.cpp
Fase3/src/UI/: ui.cpp
Fase3/src/Utils/: XMLDataFormat.cpp  point.cpp  primitive.cpp
Fase3/test_files_phase_1/: test_cone.xml
Fase3/test_files_phase_2/: testn1.xml  testn3.xml
Fase3/test_files_phase_3/: comet.xml  my_test_3_2.xml  solar_system.xml  teapot.xml  test_3_1.xml  test_teapot.xml  test_teapot2.xml
Fase4/: CMakeLists.txt  README.md  comet.patch  cometgen.c
Fase4/include/Engine/: engine.h
Fase4/include/Generator/: bezier.h  buildPrimitives.h  generator.h
Fase4/include/Utils/: XMLDataFormat.h  point.h  primitive.h
Fase4/src/Engine/: engine.cpp  info.json
Fase4/src/Generator/: bezier.cpp  buildPrimitives.cpp  generator.cpp
Fase4/src/UI/: ui.cpp
Fase4/src/Utils/: XMLDataFormat.cpp  point.cpp  primitive.cpp
Fase4/test_files_phase_2/: bcs.xml  diff_boxes2.xml  snowman.xml  solar_system_real_scale.xml  test_ring3.xml  testn2.xml  testn4.xml
Fase4/test_files_phase_3/: my_test_3_2.xml  test_rotate.xml
Fase4/test_files_phase_4/: chapeu_festa.xml  coke.xml  pilar.xml  pool.xml  solar_system.xml  test_cyl.xml  teste_cometa.xml  textured_box.xml  wood_box.xml
Fase4/tinyXML/: tinyxmlerror.cpp  tinyxmlparser.cpp
